# waterui

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .release-please-manifest.json  .typos.toml  AGENT.md  CHANGELOG.md  CLAUDE.md  CODEBASE_DOCUMENTATION.md  Cargo.toml  Clippy.toml  Dockerfile  GEMINI.md  GEMINI_ASSISTANT.md  HOT_RELOAD_PLAN.md  LAYOUT_ISSUE_REPORT.md  PLAN_LOGGING.md  Package.swift  README.md  ROADMAP.md  TUTORIAL_BOOK.md  apply.sh  build.rs  cliff.toml  dist-workspace.toml  gradle.properties  release-plz.toml  settings.gradle.kts  subagent  test_example.rs
backends/hydrolysis/: Cargo.toml  PLAN.md  README.md
backends/hydrolysis/examples/: text_png.rs
backends/hydrolysis/src/: dispatcher.rs  lib.rs  renderer.rs  scene.rs
backends/hydrolysis/src/backend/: cpu.rs  gpu.rs  mod.rs
backends/hydrolysis/src/components/: controls.rs  divider.rs  layout.rs  mod.rs  progress.rs  text.rs
backends/hydrolysis/src/tree/: mod.rs  parser.rs  reactive.rs  render.rs
backends/tui/: Cargo.toml  PLAN.md  README.md
backends/tui/src/: app.rs  error.rs  lib.rs  renderer.rs  terminal.rs
backends/web/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
backends/web/src/: app.rs  dom.rs  error.rs  lib.rs  renderer.rs
backends/web/styles/: default.css
cli/: AGENT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs
cli/src/: add_backend.rs  android.rs  apple.rs  backend.rs  brew.rs  build.rs  cancel.rs  clean.rs  command.rs  config.rs  crash.rs  debug.rs  device.rs  devices.rs  doctor.rs  installer.rs  lib.rs  main.rs  output.rs  package.rs  permission.rs  platform.rs  project.rs  run.rs  run_session.rs  runtime.rs  templates.rs  toolchain.rs  util.rs  utils.rs  water_dir.rs
cli/src/android/: backend.rs  build.rs  device.rs  platform.rs  scan.rs  toolchain.rs
cli/src/apple/: backend.rs  build.rs  device.rs  platform.rs  sample.json  scan.rs  toolchain.rs
cli/src/backend/: android.rs  apple.rs  tui.rs
cli/src/create/: android.rs  mod.rs  rust.rs  swift.rs  template.rs  web.rs
cli/src/debug/: crash.rs  file_watcher.rs  hot_reload.rs  mod.rs  panic.rs  runner.rs
cli/src/debug/hot_reload/: session.rs
cli/src/device/: android.rs  apple.rs  mod.rs
cli/src/doctor/: toolchain.rs
cli/src/hot_reload/: mod.rs  server.rs  session.rs  watcher.rs
cli/src/permission/: mod.rs
cli/src/platform/: android.rs  apple.rs  mod.rs  tui.rs
cli/src/project/: manifest.rs
cli/src/templates/: .gitignore.tpl  Cargo.toml.tpl  build.rs.tpl  lib.rs.tpl
cli/src/templates/android/: build-rust.sh.tpl  build.gradle.kts.tpl  settings.gradle.kts.tpl
cli/src/templates/apple/: build-rust.sh.tpl
cli/src/templates/web/: index.html.tpl  main.js  style.css
cli/src/terminal/: add_backend.rs  android.rs  apple.rs  devices.rs  doctor.rs  main.rs  output.rs  platform.rs  run.rs  shell.rs  ui.rs  util.rs
cli/src/terminal/command/: add_backend.rs  backend.rs  build.rs  capture.rs  clean.rs  device.rs  device_selector.rs  devices.rs  doctor.rs  mod.rs  package.rs  permission.rs  playground.rs  run.rs
cli/src/terminal/commands/: build.rs  clean.rs  create.rs  devices.rs  doctor.rs  mod.rs  package.rs  run.rs
cli/src/terminal/create/: android.rs  mod.rs  template.rs  web.rs
cli/src/terminal/templates/: lib.rs.tpl
cli/src/toolchain/: android.rs  cmake.rs  doctor.rs  error.rs  installation.rs  mod.rs  rust.rs  swift.rs
cli/src/toolchain/installation/: brew.rs
components/controls/: CHANGELOG.md  Cargo.toml  README.md
components/controls/src/: button.rs  lib.rs  slider.rs  stepper.rs  text_editor.rs  text_field.rs  toggle.rs
components/form/: CHANGELOG.md  Cargo.toml  README.md
components/form/src/: lib.rs  secure.rs  valid.rs
components/graphics/: CHANGELOG.md  Cargo.toml  GPU_VIDEO_DESIGN.md  README.md
components/graphics/src/: canvas.rs  context.rs  conversions.rs  gpu_surface.rs  gradient.rs  image.rs  lib.rs  path.rs  renderer_view.rs  shader.rs  shader_surface.rs  shape.rs  state.rs  text.rs
components/layout/: CHANGELOG.md  Cargo.toml  LAYOUT.md  LAYOUT_SPEC.md  README.md
components/layout/src/: container.rs  core.rs  frame.rs  grid.rs  lib.rs  overlay.rs  padding.rs  safe_area.rs  scroll.rs  spacer.rs  stack.rs  tests.rs
components/navigation/: CHANGELOG.md  Cargo.toml  README.md
components/navigation/src/: lib.rs  search.rs  tab.rs
components/text/: CHANGELOG.md  Cargo.toml  README.md
components/text/src/: font.rs  highlight.rs  lib.rs  link.rs  locale.rs  macros.rs  styled.rs  text.rs
core/: README.md  (+1 more)
derive/: Cargo.toml  README.md
derive/src/: lib.rs
examples/canvas/: Cargo.toml  Water.toml
examples/canvas/src/: lib.rs
examples/flame/: Cargo.toml  Water.toml  mac-screenshot-hdr.heic
examples/flame/src/: flame.wgsl  lib.rs
examples/form/: Cargo.toml  Water.toml
examples/form/src/: lib.rs
examples/gesture/: Cargo.toml  Water.toml
examples/gesture/src/: lib.rs
examples/list/: Cargo.toml  Water.toml
examples/list/src/: lib.rs
examples/media-picker/: .gitignore  Cargo.toml  Water.toml
examples/media-picker/src/: lib.rs
examples/starfield/: Cargo.toml  Water.toml
examples/starfield/src/: lib.rs  starfield.wgsl
examples/video-player/: Cargo.toml  Water.toml
examples/video-player/src/: lib.rs
ffi/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml  generate_header.rs  waterui.h
ffi/src/: action.rs  app.rs  array.rs  color.rs  event.rs  gesture.rs  id.rs  lib.rs  macros.rs  reactive.rs  theme.rs  ty.rs  type_id.rs  views.rs  window.rs
ffi/src/android/: mod.rs
ffi/src/components/: button.rs  dynamic.rs  form.rs  gpu_surface.rs  graphics.rs  layout.rs  lazy.rs  link.rs  list.rs  media.rs  mod.rs  navigation.rs  progress.rs  table.rs  text.rs
kit/location/: Cargo.toml  build.rs
kit/location/src/: android.rs  apple.rs  lib.rs  reactive.rs
macros/: CHANGELOG.md  Cargo.toml  README.md
macros/src/: lib.rs
utils/color/: CHANGELOG.md  Cargo.toml  README.md
utils/color/src/: lib.rs  oklch.rs  p3.rs  parse.rs  srgb.rs
utils/str/: CHANGELOG.md  Cargo.toml  README.md
utils/str/src/: lib.rs
(+196 files in other folders)
