
[workspace]
members = [
    "core",
    "components/*",
    "utils/*",
    "backends/tui",
    "backends/hydrolysis",
    # "plugins/i18n", We need more thoughtful design about i18n...
    "window",
    "demo",
    "ffi",
    "derive",
    "cli"]
resolver = "2"

[package]
name = "waterui"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "A modern UI framework for Rust"
keywords = ["ui", "framework", "rust", "gui", "water"]
categories = ["gui"]

[workspace.package]
edition = "2024"
authors = ["Lexo Liu"]
rust-version = "1.87"
license = "MIT"
readme = "README.md"
repository = "https://github.com/water-rs/waterui"
description = "A modern UI framework for Rust"
keywords = ["ui", "framework", "rust", "gui", "water"]
categories = ["gui"]

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
clippy.multiple_crate_versions =  { level = "allow", priority = 1 }



[workspace.dependencies]
executor-core = { version = "0.7.0", features = ["std"]}
futures = "0.3"
nami = { version = "0.9.0" }
nami-core = { version = "0.3.0" }
tracing = "0.1.41"
waterui-core = { version = "0.1.0", path = "core" }
waterui-str = { version = "0.2.0", path = "utils/str" }
waterui-url = { version = "0.1.0", path = "utils/url" }
waterui-color = { version = "0.1.0", path = "utils/color" }
waterui-text = { version = "0.1.0", path = "components/text" }
waterui-media = { version = "0.1.0", path = "components/media" }
waterui-form = { version = "0.1.0", path = "components/form" }
waterui-controls = { version = "0.1.0", path = "components/controls"}
waterui-form-derive = { version = "0.1.0", path = "components/form/derive" }
waterui-graphics = { version = "0.1.0", path = "components/graphics" }
waterui-ffi = { version = "0.1.0", path = "ffi" }
waterui-layout = { version = "0.1.0", path = "components/layout" }
waterui-navigation = { version = "0.1.0", path = "components/navigation" }
waterui-gtk4 = { version = "0.1.0", path = "backends/gtk4" }
waterui-web = { version = "0.1.0", path = "backends/web" }
waterui-tui = { version = "0.1.0", path = "backends/tui" }
hydrolysis = { version = "0.1.0", path = "backends/hydrolysis" }
waterui = { version = "0.1.0", path = "." }
waterui-derive = { version = "0.1.0", path = "derive" }
waterkit-location = { version = "0.1.0", path = "kit/location" }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
wgpu = "27.0"
time = "0.3"
tiny-skia = "0.11"
vello = "0.2"
zenwave = { git = "https://github.com/zen-rs/zenwave" }
tracing-panic = "0.1.2"

[dependencies]
nami.workspace = true
waterui-core.workspace = true
waterui-str.workspace = true
waterui-layout.workspace = true
waterui-text.workspace = true
waterui-media.workspace = true
waterui-navigation.workspace = true
waterui-color.workspace = true
waterui-form.workspace = true
waterui-controls.workspace = true
executor-core.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tracing-android = "0.1.3"
tracing-panic = "0.1.2"
pulldown-cmark = "0.13"
waterui-derive.workspace = true
async-channel = "1.9"
libloading = "0.8"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }
serde_json = "1.0"
zenwave.workspace = true

[features]
default = []
std = []
all = ["std"]


[lints]
workspace = true
