
[workspace]
members = [
    "core",
    "components/*",
    "utils/*",
    "ffi",
    "macros",
    "cli",
    "examples/*",
]
exclude = [
  "hydrolysis",
  "derive"
]

resolver = "2"

[package]
name = "waterui"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "A modern UI framework for Rust"
keywords = ["ui", "framework", "rust", "gui", "water"]
categories = ["gui"]

[workspace.package]
edition = "2024"
authors = ["Lexo Liu"]
rust-version = "1.87"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/water-rs/waterui"
description = "A modern UI framework for Rust"
keywords = ["ui", "framework", "rust", "gui", "water"]
categories = ["gui"]

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
clippy.multiple_crate_versions =  { level = "allow", priority = 1 }



[workspace.dependencies]
executor-core = { version = "0.7.0", features = ["std"]}
futures = "0.3"
nami = { version = "0.9.0" }
nami-core = { version = "0.3.0" }
tracing = "0.1.41"
waterui-core = { version = "0.2.0", path = "core" }
waterui-str = { version = "0.2.1", path = "utils/str" }
waterui-url = { version = "0.2.0", path = "utils/url" }
waterui-color = { version = "0.2.0", path = "utils/color" }
waterui-text = { version = "0.2.0", path = "components/text" }
waterui-media = { version = "0.2.0", path = "components/media" }
waterui-form = { version = "0.2.0", path = "components/form" }
waterui-controls = { version = "0.2.0", path = "components/controls"}
waterui-graphics = { version = "0.2.0", path = "components/graphics" }
waterui-ffi = { version = "0.2.0", path = "ffi" }
waterui-layout = { version = "0.2.0", path = "components/layout" }
waterui-navigation = { version = "0.2.0", path = "components/navigation" }
waterui = { version = "0.2.0", path = "." }
native-executor = { version = "0.7.0" }
waterui-macros = { version = "0.2.0", path = "macros" }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
wgpu = "27.0.1"
time = "0.3"
tiny-skia = "0.11"
zenwave = { version = "0.3.0", default-features = false, features = ["hyper-backend", "ws"] }
skyzen = { version = "0.1.0", default-features = false }
pastey = "0.2.0"
tracing-panic = "0.1.2"
robius-open = { version = "0.1", default-features = false }


[dependencies]
nami.workspace = true
waterui-core.workspace = true
waterui-str.workspace = true
waterui-layout.workspace = true
waterui-text.workspace = true
waterui-media.workspace = true
native-executor.workspace = true
waterui-navigation.workspace = true
waterui-color.workspace = true
waterui-form.workspace = true
waterui-controls.workspace = true
executor-core.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
pulldown-cmark = "0.13"
waterui-macros.workspace = true
libloading = "0.9"
uuid = { version = "1.18.1", features = ["v4"] }
waterui-graphics = { workspace = true, optional = true }
async-fs = "2.2.0"
robius-open.workspace = true



[target.'cfg(target_vendor = "apple")'.dependencies]
zenwave = { workspace = true, features = ["native-tls"] }

[target.'cfg(target_os = "android")'.dependencies]
zenwave = { workspace = true, features = ["rustls"] }
android_clipboard = "0.1.0"

[target.'cfg(not(any(target_vendor = "apple", target_os = "android")))'.dependencies]
zenwave = { workspace = true, features = ["rustls"] }


[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3.6.1"



[features]
default = []
std = []
all = ["std"]
graphics = ["dep:waterui-graphics"]  # includes canvas by default
graphics-minimal = ["dep:waterui-graphics", "waterui-graphics/wgpu"]  # only GpuSurface, no canvas


[lints]
workspace = true

# Optimize release builds for size
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"    # Optimize for size
strip = true       # Strip symbols
panic = "abort"    # Smaller panic handling
