[package]
name = "waterui-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cargo_metadata = "0.23.1"
cargo_toml = "0.22.3"
color-eyre = "0.6.5"
serde.workspace = true
serde_json = "1.0.145"
smol = "2.0.2"
target-lexicon = "0.13.3"
thiserror = "2.0.17"
time = { workspace = true, features = ["serde"] }
toml = "0.9.8"
which = "8.0.0"

[lints]
workspace = true
