[package]
name = "waterui-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "water"
path = "src/terminal/main.rs"

[dependencies]
cargo_metadata = "0.23.1"
cargo_toml = "0.22.3"
color-eyre = { version = "0.6.5", features = ["issue-url"]}
include_dir = "0.7.4"
skyzen = { workspace = true, default-features = false, features = ["json", "ws", "hyper"] }
futures.workspace = true
pin-project-lite = "0.2.16"
reflink = "0.1.3"
serde.workspace = true
serde_json = "1.0"
smol = "2.0.2"
target-lexicon = "0.13.3"
thiserror = "2.0.17"
time = { workspace = true, features = ["serde"] }
toml = "0.9.8"
tracing.workspace = true
which = "8.0.0"
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }

# Terminal UI dependencies
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
anstream = "0.6"              # Auto-detected ANSI output stream
anstyle = "1"                 # ANSI styling without manual escape codes
ctrlc = "3.4"
whoami = "1.5"
heck = "0.5"                  # Case conversion (kebab-case, snake_case, etc.)

[lints]
workspace = true
