[package]
name = "waterui-ffi"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "FFI bindings for the WaterUI cross-platform UI framework"
keywords = ["ffi", "ui", "framework", "gui", "cross-platform"]
categories = ["gui", "api-bindings"]

[dependencies]
waterui.workspace = true
waterui-core.workspace = true
waterui-text.workspace = true
waterui-form.workspace = true
waterui-navigation.workspace = true
waterui-media.workspace = true
native-executor.workspace = true
waterui-color.workspace = true
waterui-layout.workspace = true
nami.workspace = true
executor-core.workspace = true
cbindgen = { version = "0.29.0", optional = true }
waterui-graphics = { workspace = true, features = ["wgpu"] }
wgpu.workspace = true
pastey.workspace = true
tracing.workspace = true
tracing-panic.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pollster = "0.4"
raw-window-handle = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
tracing-oslog = "0.3"


[[bin]]
name = "generate_header"
path = "generate_header.rs"
required-features = ["cbindgen"]

[features]
default = ["std"]
std = []
