[package]
name = "waterui-macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Macro for WaterUI"
keywords = ["macro", "derive", "ui"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
waterui = { path = ".." }

[lints]
workspace = true
