[package]
name = "waterui-controls"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Form components for WaterUI (inputs, buttons, validation)"
keywords = ["form", "input", "validation", "ui", "components"]
categories = ["gui"]


[dependencies]
waterui-core.workspace = true
waterui-layout.workspace = true
nami.workspace = true
waterui-text.workspace = true


[features]
default = []

[dev-dependencies]
waterui.workspace = true

[lints]
workspace = true
