[package]
name = "waterui-form"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Form components for WaterUI (inputs, buttons, validation)"
keywords = ["form", "input", "validation", "ui", "components"]
categories = ["gui"]


[dependencies]
time = "0.3.44"
waterui-core.workspace = true
waterui-layout.workspace = true
nami.workspace = true
waterui-controls.workspace = true
waterui-text.workspace = true
waterui-color.workspace = true
zeroize = { version = "1.8.2", default-features = false }
bcrypt = "0.17.1"
regex = "1.12.2"

[features]
default = []

[lints]
workspace = true
