[package]
name = "waterui-graphics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Graphic components for WaterUI"
keywords = ["graphics", "2d", "ui", "waterui"]
categories = ["gui"]

[features]
default = []
wgpu = ["dep:wgpu"]

[dependencies]
waterui-core.workspace = true
waterui-color.workspace = true
kurbo = "0.11.0"
tiny-skia = "0.11.4"
wgpu = { workspace = true, optional = true }

[lints]
workspace = true
