[package]
name = "waterui-graphics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Graphic components for WaterUI"
keywords = ["graphics", "2d", "ui", "waterui"]
categories = ["gui"]

[features]
default = ["canvas"]
wgpu = ["dep:wgpu", "dep:bytemuck"]
canvas = ["wgpu", "dep:vello"]

[dependencies]
waterui-core.workspace = true
waterui-color.workspace = true
nami.workspace = true
wgpu = { workspace = true, optional = true }
bytemuck = { version = "1.14", optional = true }
vello = { workspace = true, optional = true }
tracing.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[lints]
workspace = true
