[package]
name = "waterui-graphics"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Graphic components for WaterUI"
keywords = ["graphics", "2d", "ui", "waterui"]
categories = ["gui"]

[features]
default = []
wgpu = ["dep:wgpu", "dep:bytemuck"]

[dependencies]
waterui-core.workspace = true
waterui-color.workspace = true
wgpu = { workspace = true, optional = true }
bytemuck = { version = "1.14", optional = true }
tracing.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[lints]
workspace = true
