[package]
name = "waterui-layout"
version = "0.2.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Layout components for WaterUI"
keywords = ["layout", "ui", "components", "flexbox"]
categories = ["gui"]


[dependencies]
waterui-core.workspace = true
nami.workspace = true


[lints]
workspace = true
