[package]
name = "waterui-navigation"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Navigation components for WaterUI"
keywords = ["navigation", "ui", "components", "menu"]
categories = ["gui"]


[dependencies]
waterui-core.workspace = true
waterui-text.workspace = true
waterui-color.workspace = true
waterui-controls.workspace = true

nami.workspace = true


[lints]
workspace = true
