[package]
name = "waterui-text"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Text and typography components for WaterUI"
keywords = ["text", "typography", "ui", "components"]
categories = ["gui", "text-processing"]

[dependencies]
waterui-core.workspace = true
waterui-color.workspace = true
waterui-layout.workspace = true
nami.workspace = true
time.workspace = true
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
async-oneshot = "0.5"
pulldown-cmark = "0.13"

[lints]
workspace = true
