[package]
name = "waterui-text"
version = "0.2.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Text and typography components for WaterUI"
keywords = ["text", "typography", "ui", "components"]
categories = ["gui", "text-processing"]

[dependencies]
waterui-core.workspace = true
waterui-color.workspace = true
nami.workspace = true
time.workspace = true
syntect = { version = "5", default-features = false, features = ["default-themes", "regex-fancy"] }
two-face = "0.4"
pulldown-cmark = "0.13"

[lints]
workspace = true
