[package]
name = "waterui-color"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nami.workspace = true
waterui-core.workspace = true
pastey.workspace = true
[features]


[lints]
workspace = true
