[package]
name = "waterui-str"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "String utilities for WaterUI"
keywords = ["string", "text", "utilities", "waterui"]
categories = ["text-processing", "data-structures"]

[dependencies]
serde = { workspace = true, optional = true }
nami-core.workspace = true

[features]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
